--- a/css/global.css
+++ b/css/global.css
@@ -46,6 +46,7 @@
 body {
   display: flex;
   flex-direction: column;
+  min-width: 350px;
   min-height: 100vh;
   font-size: var(--font-size-md);
   font-family: "Roboto", sans-serif;
