--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 .header {
+  flex: 0;
   padding: var(--space-xl);
   color: var(--white);
   background-color: var(--color-primary);
