--- a/css/main-container.css
+++ b/css/main-container.css
@@ -9,10 +9,9 @@
 }
 
 .main-container .gameboard {
-  flex: 1 0 auto;
-  display: grid;
-  max-height: 80vw;
+  width: calc(350px - var(--space-xl));
   aspect-ratio: 1 / 1;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
   gap: var(--space-xs);
@@ -20,7 +19,6 @@
 
 .main-container .gameboard .btn-field {
   font-size: var(--font-size-xl);
-  /* padding: 0; */
 }
 
 .main-container .controls .btn-restart {
